--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <div class="animation-card">
       <h2>Zoom-In Animation</h2>
       <div class="animation-preview">
-        <img class="zoom-in" src="https://via.placeholder.com/150" alt="Zoom-In Image" style="border-radius: 8px;">
+        <img class="zoom-in" src="logo.png" alt="Zoom-In Image" style="border-radius: 8px;" height="100px">
       </div>
       <button class="copy-button" onclick="copyCode('zoom-in-code')">Copy Code</button>
       <pre id="zoom-in-code" class="code-snippet">@keyframes zoom-in {
@@ -80,7 +80,7 @@
     <div class="animation-card">
       <h2>Fade-In Animation</h2>
       <div class="animation-preview">
-        <img class="fade-in" src="https://via.placeholder.com/150" alt="Fade-In Image" style="border-radius: 8px;">
+        <img class="fade-in" src="logo.png" alt="Fade-In Image" style="border-radius: 8px;" height="100px">
       </div>
       <button class="copy-button" onclick="copyCode('fade-in-code')">Copy Code</button>
       <pre id="fade-in-code" class="code-snippet">@keyframes fade-in {
